# StuMaSys

./: CMakeLists.txt  README.md  main.cpp
DatabaseEntityClass/AdministratorBasicInformation/: AdministratorBasicInformation.cpp  AdministratorBasicInformation.h
DatabaseEntityClass/AdministratorPasswordTable/: AdministratorPasswordTable.cpp  AdministratorPasswordTable.h
DatabaseEntityClass/StudentGradesTable/: StudentGradesTable.cpp  StudentGradesTable.h
DatabaseEntityClass/StudentHealthSate/: StudentHealthSate.cpp  StudentHealthSate.h
DatabaseEntityClass/StudentPasswordTable/: StudentPasswordTable.cpp  StudentPasswordTable.h
DatabaseEntityClass/StudentsBasicInformation/: StudentsBasicInformation.cpp  StudentsBasicInformation.h
tool/Global/: Global.cpp  Global.h
window/Administrator/: Administrator.cpp  Administrator.h  Administrator.ui
window/AdministratorAttachmentWindows/AddStudent/: AddStudent.cpp  AddStudent.h  AddStudent.ui
window/AdministratorAttachmentWindows/AllStudentGrades/: AllStudentGrades.cpp  AllStudentGrades.h  AllStudentGrades.ui
window/AdministratorAttachmentWindows/AllStudentGrades/AddStudentGrades/: AddStudentGrades.cpp  AddStudentGrades.h  AddStudentGrades.ui
window/AdministratorAttachmentWindows/AllStudentInformation/: AllStudentInformation.cpp  AllStudentInformation.h  AllStudentInformation.ui
window/AdministratorAttachmentWindows/ModifyAdministratorPassword/: ModifyAdministratorPassword.cpp  ModifyAdministratorPassword.h  ModifyAdministratorPassword.ui
window/AdministratorAttachmentWindows/ModifyStudentInformation/: ModifyStudentInformation.cpp  ModifyStudentInformation.h  ModifyStudentInformation.ui
window/AdministratorAttachmentWindows/ModifyStudentPassword/: ModifyStudentPassword.cpp  ModifyStudentPassword.h  ModifyStudentPassword.ui
window/AdministratorAttachmentWindows/StudentEpidemicManagement/: StudentEpidemicManagement.cpp  StudentEpidemicManagement.h  StudentEpidemicManagement.ui
window/LogIn/: LogIn.cpp  LogIn.h  LogIn.ui
window/LoginAttachmentWindows/Register/: Register.cpp  Register.h  Register.ui
window/LoginAttachmentWindows/RetrievePassword/: RetrievePassword.cpp  RetrievePassword.h  RetrievePassword.ui
window/Student/: Student.cpp  Student.h  Student.ui
window/StudentAttachmentWindows/StudentFeedback/: StudentFeedback.cpp  StudentFeedback.h  StudentFeedback.ui
window/StudentAttachmentWindows/StudentHealth/: StudentHealth.cpp  StudentHealth.h  StudentHealth.ui
window/StudentAttachmentWindows/StudentMail/: StudentMail.cpp  StudentMail.h  StudentMail.ui
window/StudentAttachmentWindows/StudentNotes/: StudentNotes.cpp  StudentNotes.h  StudentNotes.ui
window/StudentAttachmentWindows/StudentSelfModifyPassword/: StudentSelfModifyPassword.cpp  StudentSelfModifyPassword.h  StudentSelfModifyPassword.ui
window/StudentAttachmentWindows/StudentSelfSelectGrades/: StudentSelfSelectGrades.cpp  StudentSelfSelectGrades.h  StudentSelfSelectGrades.ui
window/StudentAttachmentWindows/StudentSelfShowInformation/: StudentSelfShowInformation.cpp  StudentSelfShowInformation.h  StudentSelfShowInformation.ui
